[project]
name = "mut-pred-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anndata>=0.12.7",
    "h5py==3.14.0",
    "ipykernel==6.29.5",
    "ipython==9.1.0",
    "jupyterlab>=4.5.3",
    "matplotlib==3.10.0",
    "numpy==2.0.1",
    "onnxruntime==1.22.0",
    "openpyxl>=3.1.5",
    "pandas==2.3.1",
    "scipy==1.16.0",
    "seaborn==0.13.2",
    "statsmodels==0.14.5",
    "sympy==1.13.3",
    "tables==3.10.2",
    "tqdm==4.67.1",
]
